--- a/style.css
+++ b/style.css
@@ -1,3 +1,42 @@
 body {
   /* background-color: blue !important; */
 }
+
+.link {
+  text-decoration: none;
+  display: inline-block;
+  padding: 10px;
+  border: 1px solid;
+}
+button {
+  border: none;
+  padding: 10px;
+  cursor: pointer;
+}
+
+.btn-1 {
+  background-color: aqua;
+  color: darkblue;
+}
+
+.btn-2 {
+  background-color: black;
+  color: white;
+}
+
+.btn-3 {
+  background-color: pink;
+  color: brown;
+}
+
+.coctailItem {
+  list-style: none;
+  border: 1px solid;
+  padding: 10px;
+  display: flex;
+  flex-flow: column;
+  align-items: center;
+  justify-content: center;
+  margin-bottom: 10px;
+  overflow: hidden;
+}
